--- a/Hourly-to-Salary.css
+++ b/Hourly-to-Salary.css
@@ -42,7 +42,8 @@
 .heading {
     font-size: 30px;
     font-weight: bold;
-    padding: 5%;
+    padding: 1%;
+    text-align: center;
     background-color: #e6dfdf;
 
 }
