--- a/style.css
+++ b/style.css
@@ -1,139 +1,145 @@
-/* Navbar container */
-.navbar {
-    background-color: #000000;
-    /* Navbar background color */
-    padding: 10px 20px;
-    /* Add padding for spacing */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-/* Navigation list */
+.navbar {
+    background-color: #000000;
+    padding: 10px 20px;
+}
+
 .nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    /* Align items horizontally */
 }
 
-/* List items */
 .nav-list li {
     margin-right: 20px;
-    /* Add spacing between list items */
 }
 
-/* Links */
 .nav-list li a {
     text-decoration: none;
     color: #fff;
-    /* Link color */
     font-size: 16px;
-    /* Font size */
     transition: color 0.3s ease;
-    /* Add transition for smooth color change */
 }
 
-/* Hover effect */
 .nav-list li a:hover {
     color: #ccc;
-    /* Change color on hover */
 }
 
-.heading {
-    font-size: 30px;
-    font-weight: bold;
-    padding: 5%;
-    background-color: #e6dfdf;
-
-}
-
-.flex-container {
+.calculator-main {
     display: flex;
+    justify-content: space-between;
+    padding: 50px;
 }
 
-.absolute-box {
-    background-color: rgb(255, 255, 255);
-    width: 450px;
-    margin-left: 50px;
-    margin-top: 10%;
-}
-
-.grid-container {
-    padding: 20px;
-}
-
-.grid-top {
-    background-color: rgb(179, 18, 18);
-    margin-left: 5%;
-    height: screen;
-    margin-top: 3%;
+.calculator-calculation-parent {
+    background-color: rgb(220 38 38);
+    width: 45%;
+    height: 90vh;
     position: relative;
 }
 
+.calculator-calculation-card {
+    background-color: white;
+    position: absolute;
+    right: -40px;
+    box-shadow: 3px 3px 3px rgb(230, 230, 230);
+    top: 40px;
+    border-radius: 10px;
+    /* padding: 30px; */
+    height: 100%;
+    width: 80%;
+}
+
+.calculator-calculation-card h1 {
+    background-color: rgb(229 231 235);
+    font-weight: 500;
+    font-size: 25px;
+    padding: 20px 30px;
+    border-radius: 10px 10px 0 0;
+}
+
 .flex-item {
-    margin-left: 10%;
-    margin-top: 5%;
+    width: 50%;
+    padding: 30px 50px;
 }
 
-.info-heading {
-    font-size: 50px;
-    font-weight: bold;
-
+.flex-item h1 {
+    margin-bottom: 20px;
+    font-size: 45px;
 }
 
-.info-paragraph {
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.selected {
-    background-color: #000000;
-    padding: px;
-    width: 30px;
-    height: 30px;
-    color: #ccc;
-    margin-top: 10px;
-    margin-left: 7px;
-}
-
-.pay {
-    background-color: #000000;
-    padding: px;
-    width: 70px;
-    height: 30px;
-    color: #ccc;
-    margin-top: 10px;
-    margin-left: 7px;
-}
-
-.pay-rate {
-    margin-left: 5px;
+.flex-item h2 {
     margin-top: 30px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 20px;
 }
 
-.hourly-rate-container {
-    margin-top: 10px;
-    font-size: 30px;
+.grid-container {
+    padding: 40px 20px 20px 20px;
 }
 
-.hours-rate {
-    background-color: #ccc;
+.grid-container h2 {
+    font-size: 12px;
+    font-weight: 600;
 }
 
-.standard-hours-container {
-    padding: 5%;
-    background-color: #ccc;
-    margin-bottom: 10px;
+.currency-selector button {
+    background-color: rgb(229 231 235);
+    color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    margin: 10px 3px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 16px;
 }
 
-.hours-worked-container {
-    padding: 5%;
+.input-group {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0;
 }
 
-.calculate-button {
-    background-color: #000000;
-    color: #fff;
+.input-group label {
+    font-size: 12px;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+.input-group input {
+    padding: 7px;
+    border-radius: 5px;
+    border: none;
+    border: 1px solid rgb(209 213 219);
+}
+
+.calculate-btn {
+    background-color: black;
+    color: white;
     width: 100%;
-    padding: 2%;
-    font-size: 15px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.hourly-pay {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.hourly-pay input[type=range] {
+    width: 100%;
 }
